
[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rsm_ping"
version = "1.0.0"
description = "Resonant Stillness Monitor — rsm_ping"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Freedom (Damjan)" }]
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Topic :: System :: Networking :: Monitoring",
  "Intended Audience :: Developers"
]
dependencies = ["numpy", "matplotlib"]

[project.scripts]
rsm-ping = "rsm_ping.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["rsm_ping"]
